@@ -16,3 +16,7 @@ docs/html
 docs/html.zip
 docs/*.db
 docs/*.tmp
+
+# CLion
+.idea/
+cmake-build-*/
