@@ -1,0 +1,9 @@
+set(ROOT_PATH ${UGFX_ROOT}/src/gadc)
+
+list(APPEND ugfx_INCLUDE_DIRS
+    ${ROOT_PATH}
+)
+
+list(APPEND ugfx_SOURCES
+    ${ROOT_PATH}/gadc.c
+)
