@@ -27,6 +27,7 @@ FIX:        Fix missing return value in gfxQueueFSyncInsert().
 FEATURE:    Adding support for FreeBSD.
 FIX:        Fix incorrect calls to mmap() and sem_open() in SDL2 driver (lax operating systems such as Linux & MacOS were silently tolerating these).
 FIX:        Minor code improvements
+FEATURE:    Add cmake support
 
 
 *** Release 2.9 ***
